# TrustCrawler

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  score_calculation.txt
Task 1 Multi-Source Scraper/: README.md  main.py
Task 1 Multi-Source Scraper/PubMed article extractor/: README.md  api.py
Task 1 Multi-Source Scraper/YouTube videos extractor/: README.md  api.py
Task 1 Multi-Source Scraper/blog posts extractor/: README.md  api.py
Task 1 Multi-Source Scraper/output/: blogs.json  pubmed.json  scraped_data.json  youtube.json
Task 1 Multi-Source Scraper/ui/: app.py
Task 2 Trust Score System Design/: README.md  design.md
Task 2 Trust Score System Design/data/: README.md  domain_tiers.json  known_orgs.txt  spam_domains.txt
sample-results/Input/: input.csv
sample-results/Output/: output_table_1.csv  output_table_2.csv  scraped_data.json
scripts/: verify_defaults.py
src/: api.py  defaults.py  errors.py  logging_config.py  schema.py
src/scrapers/: blog.py  pubmed.py  youtube.py
src/trust_score/: abuse_prevention.py  compute.py  weights.py
src/trust_score/components/: author_credibility.py  citation_count.py  (+3 more)
src/utils/: chunking.py  language.py  tagging.py
tests/: test_api.py  test_errors.py  test_schema.py
tests/scrapers/: conftest.py  test_blog.py  test_pubmed.py  test_youtube.py
tests/trust_score/: conftest.py  test_abuse_prevention.py  test_compute.py  test_weights.py
tests/utils/: test_chunking.py  test_language.py  test_tagging.py
(+5 files in other folders)
