[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustcrawler"
version = "0.1.0"
description = "Multi-source content scraper with trust scoring (Data Scraping Assignment)."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "trustcrawler.egg-info",
    "Task 1 Multi-Source Scraper/output",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# E501: line-length is enforced by formatter, not the linter, to avoid noise
# from pre-existing long URLs / docstring examples. B008 trips on FastAPI's
# `Depends(...)` default-arg pattern, which is the canonical idiom.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally re-bind names and use star-args; B011 (assert False)
# and similar test-hostile rules are off here.
"tests/**" = ["B011", "SIM117"]
